--- a/Links_and_Images/index.html
+++ b/Links_and_Images/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a href="about.html">About</a>
+    <a href="Pages/about.html">About </a>
 </body>
 </html>
