--- a/Links_and_Images/index.html
+++ b/Links_and_Images/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a href="Pages/about.html">About </a>
+
+    <a href="https://www.theodinproject.com/about">Click me!</a>
+    <p><a href="./Pages/about.html">About </a></p>
+    <p><img src="./images/dog.jpg"></p>
+    
 </body>
 </html>
