added alt for dog.jpg

--- a/Links_and_Images/index.html
+++ b/Links_and_Images/index.html
@@ -11,7 +11,7 @@
 
     <a href="https://www.theodinproject.com/about">Click me!</a>
     <p><a href="./Pages/about.html">About </a></p>
-    <p><img src="./images/dog.jpg"></p>
+    <p><img src="./images/dog.jpg" alt="Charles the Dogs"></p>
     
 </body>
 </html>
