--- a/Links_and_Images/Pages/about.html
+++ b/Links_and_Images/Pages/about.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>About Page</h1>
-        <img src="../images/dog.jpg" alt="Charles the Dog">
+        <p><img src="../images/dog.jpg" alt="Charles the Dog"></p>
     </body>
 </html>
